k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chat
  labels:
    name: chat
    app: lobechat
